@@ -347,6 +347,12 @@ void bx_init_options()
       "dumpstats mode",
       "dump statistics period",
       0, BX_MAX_BIT32U, 0);
+  // unlock disk images
+  new bx_param_bool_c(menu,
+      "unlock_images",
+      "Unlock disk images",
+      "Unlock disk images leftover previous from Bochs session",
+      0);
 
   // subtree for setting up log actions by device in bochsrc
   bx_list_c *logfn = new bx_list_c(menu, "logfn", "Logfunctions");
